force-app/main/default/objects/Contact/fields/BU_Department__c.field-meta.xml
<CustomField>
    <fullName>BU_Department__c</fullName>
    <inlineHelpText>Select the Associated BU</inlineHelpText>
    <label>BU/Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
                <default>true</default>
                <label>Health</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>