force-app/main/default/objects/Contact/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who manages the employee - People Manager</inlineHelpText>
    <label>Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>