force-app/main/default/objects/Contact/fields/Contact_Active12__c.field-meta.xml
<CustomField>
    <fullName>Contact_Active12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing123</description>
    <inlineHelpText>this is a test for CI job</inlineHelpText>
    <label>Contact Active12</label>
    <type>Checkbox</type>
</CustomField>