force-app/main/default/objects/Contact/fields/Contact_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing</description>
    <label>Contact Active</label>
    <type>Checkbox</type>
</CustomField>