force-app/main/default/objects/Contact/fields/ContactMoney__c.field-meta.xml
<CustomField>
    <fullName>ContactMoney__c</fullName>
    <label>ContactMoney</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>