force-app/main/default/objects/Contact/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>test</description>
    <label>Employee Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>