force-app/main/default/objects/Contact/fields/Functional_Team__c.field-meta.xml
<CustomField>
    <fullName>Functional_Team__c</fullName>
    <label>Functional Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Team</valueSetName>
    </valueSet>
</CustomField>