force-app/main/default/objects/Contact/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <inlineHelpText>Date of Employee Hire</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>