force-app/main/default/objects/Contact/fields/INPT_Contact_URL__c.field-meta.xml
<CustomField>
    <fullName>INPT_Contact_URL__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field is the URL of the related GovWin IQ Contact.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field is the URL of the related GovWin IQ Contact.</inlineHelpText>
    <label>IQ Contact URL</label>
    <type>Url</type>
</CustomField>