force-app/main/default/objects/Contact/fields/INPUT_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>INPUT_Update_Date__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the date that the related GovWin IQ contact was last updated.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the date that the related GovWin IQ contact was last updated.</inlineHelpText>
    <label>IQ Update Date</label>
    <type>Date</type>
</CustomField>