force-app/main/default/objects/Contact/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <inlineHelpText>This is the Octo Job Code level for the employee</inlineHelpText>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M8</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>E5</fullName>
            </value>
            <value>
                <fullName>E6</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>E8</fullName>
            </value>
            <value>
                <fullName>E9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>