force-app/main/default/objects/Contact/fields/Octo_Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Octo_Job_Level__c</fullName>
    <label>Octo Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Octo_Job_Level</valueSetName>
    </valueSet>
</CustomField>