force-app/main/default/objects/Contact/fields/Project_Org__c.field-meta.xml
<CustomField>
    <fullName>Project_Org__c</fullName>
    <label>Project Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DVADTC - DVA: DTC</fullName>
                <default>true</default>
                <label>DVADTC - DVA: DTC</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>