force-app/main/default/objects/Contact/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <label>Salary Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>