force-app/main/default/objects/Contact/fields/Title_Description__c.field-meta.xml
<CustomField>
    <fullName>Title_Description__c</fullName>
    <label>Title Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>