force-app/main/default/objects/Contact/fields/VA_Email__c.field-meta.xml
<CustomField>
    <fullName>VA_Email__c</fullName>
    <label>VA Email</label>
    <type>Email</type>
</CustomField>