force-app/main/default/objects/Contact/recordTypes/Archive.recordType-meta.xml
<RecordType>
    <fullName>Archive</fullName>
    <active>true</active>
    <description>B3 Archive Contact</description>
    <label>Archive</label>
</RecordType>