force-app/main/default/objects/Contact/recordTypes/Personal.recordType-meta.xml
<RecordType>
    <fullName>Personal</fullName>
    <active>true</active>
    <description>B3 Personal Contact</description>
    <label>Personal</label>
</RecordType>